# Alpha-Beta-Algorithm

./: .gitignore  Dockerfile  LICENSE  README.md  ia.py  main.py  pyproject.toml
src/: alpha_beta.py  board.py  connect4.py  ia.py  main.py  minimax.py  minmax.py  search.py  ui.py
